--- a/Web.Release.config
+++ b/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add  name="DefaultConnection"
+          connectionString="Data Source=184.168.194.55;Initial Catalog=smsosu_SMS;User ID=smsosu;Password=Wsd93fg!@#"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
